--- a/CCFS Tickets/Src/Dashboard.fx.yaml
+++ b/CCFS Tickets/Src/Dashboard.fx.yaml
@@ -1,7 +1,8 @@
 "Dashboard As screen.'autoLayout_Sidebar_ver1.0'":
     BackgroundImage: =
     Fill: =RGBA(232, 232, 232, 1)
-    OnVisible: =
+    OnVisible: |-
+        =Collect(partsTableData, {ItemNumber: "", Description: "", Quantity: ""})
 
     ScreenContainer4 As groupContainer.verticalAutoLayoutContainer:
         DropShadow: =DropShadow.Light
@@ -699,15 +700,21 @@
             SidebarContainer3_4 As groupContainer.verticalAutoLayoutContainer:
                 DropShadow: =DropShadow.Light
                 Fill: =RGBA(255, 255, 255, 1)
-                FillPortions: =3
+                FillPortions: =4
                 LayoutDirection: =LayoutDirection.Vertical
                 LayoutMinHeight: =0
-                LayoutMinWidth: =250
+                LayoutMinWidth: =400
                 LayoutMode: =LayoutMode.Auto
                 RadiusBottomLeft: =8
                 RadiusBottomRight: =8
                 RadiusTopLeft: =8
                 RadiusTopRight: =8
+                Visible: |
+                    =If(
+                        UserAdmin = 1,
+                        true ,
+                        false
+                    )
                 ZIndex: =2
 
                 Container4_1 As groupContainer.horizontalAutoLayoutContainer:
@@ -741,7 +748,7 @@
                                 "Quick Order" ,
                                 "Quick Order"
                             )
-                        Width: =Parent.Width - Icon1_1.Width
+                        Width: =Parent.Width - Icon1_1.Width - Icon1_5.Width - Icon1_11.Width
                         X: =0.00
                         Y: =0.00
                         ZIndex: =1
@@ -753,92 +760,144 @@
                         DisabledColor: =RGBA(244, 244, 244, 1)
                         Fill: =Label18_24.Fill
                         Height: =Label18_24.Height
-                        Icon: =Icon.Reload
-                        OnSelect: =Refresh(ServiceRequestMaster);
+                        Icon: =Icon.Add
+                        OnSelect: |-
+                            =Collect(partsTableData, {ItemNumber: "", Description: "", Quantity: ""})
                         ZIndex: =2
 
-                "Gallery5 As gallery.'BrowseLayout_Vertical_TwoTextVariant_ver5.0'":
-                    AlignInContainer: =AlignInContainer.SetByContainer
-                    BorderColor: =RGBA(0, 89, 178, 1)
-                    DelayItemLoading: =true
-                    Fill: =RGBA(204, 214, 224, 1)
-                    Height: =Parent.Height-Label18_7.Height
-                    Items: |+
-                        =
-                        If(UserAdmin = 0, 
-                            Filter(ServiceRequestMaster, SiteID = Int(UserSite) And (ServiceCompleteDate = Blank())), 
-                            Filter(ServiceRequestMaster, ServiceCompleteDate = Blank())
-                        )
-                        
-                    Layout: =Layout.Vertical
-                    LayoutMinHeight: =287
-                    LayoutMinWidth: =320
-                    LoadingSpinner: =LoadingSpinner.Data
-                    TemplatePadding: =0
-                    TemplateSize: =60
-                    Width: =Parent.Width
-                    ZIndex: =2
-
-                    Title6 As label:
-                        Color: =RGBA(50, 49, 48, 1)
-                        DisabledColor: =RGBA(166, 166, 166, 1)
-                        Fill: =RGBA(153, 173, 194, 1)
-                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =Self.Size * 1.8
-                        OnSelect: =Select(Parent)
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Text: =LookUp(Vendors,ID=ThisItem.VendorID).Name
-                        VerticalAlign: =VerticalAlign.Top
-                        Width: =Parent.TemplateWidth 
-                        ZIndex: =1
-
-                    Subtitle6 As label:
-                        Color: =RGBA(0, 0, 0, 1)
-                        DisabledColor: =RGBA(166, 166, 166, 1)
-                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =Self.Size * 1.8
-                        OnSelect: =Select(Parent)
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Size: =12
-                        Text: =ThisItem.ServiceRequestDate
-                        VerticalAlign: =VerticalAlign.Top
-                        Width: =Title6.Width
-                        X: =Title6.X
-                        Y: =Title6.Y + Title6.Height
-                        ZIndex: =2
-
-                    Separator9 As rectangle:
+                    Icon1_5 As icon.Reload:
                         BorderColor: =RGBA(0, 89, 178, 1)
-                        Fill: =RGBA(255, 255, 255, 1)
-                        Height: =8
-                        OnSelect: =Select(Parent)
-                        Width: =Parent.TemplateWidth
-                        Y: =Parent.TemplateHeight - Self.Height
+                        Color: =RGBA(255, 255, 255, 1)
+                        DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                        DisabledColor: =RGBA(244, 244, 244, 1)
+                        Fill: =Label18_24.Fill
+                        Height: =Label18_24.Height
+                        Icon: =Icon.Save
+                        OnSelect: =Refresh(ServiceRequestMaster);
+                        ZIndex: =3
+
+                    Icon1_11 As icon.Reload:
+                        BorderColor: =RGBA(0, 89, 178, 1)
+                        Color: =RGBA(255, 255, 255, 1)
+                        DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                        DisabledColor: =RGBA(244, 244, 244, 1)
+                        Fill: =Label18_24.Fill
+                        Height: =Label18_24.Height
+                        Icon: =Icon.Cancel
+                        OnSelect: =Refresh(ServiceRequestMaster);
                         ZIndex: =4
 
-                Label18_7 As label:
-                    Align: =Align.Center
+                Form1 As form:
                     BorderColor: =RGBA(0, 89, 178, 1)
-                    Color: =RGBA(204, 214, 224, 1)
-                    DisabledColor: =RGBA(166, 166, 166, 1)
-                    Fill: =RGBA(102, 133, 163, 1)
-                    Height: =30
-                    PaddingBottom: =7.67
-                    PaddingLeft: =7.67
-                    PaddingRight: =4.63
-                    PaddingTop: =4.63
-                    Size: =18.46
-                    Text: ="Scheduled Services"
-                    Width: =Parent.Width
-                    X: =0.00
-                    Y: =0.00
-                    ZIndex: =3
+                    DataSource: =Tickets_Master
+                    LayoutMinHeight: =250
+                    LayoutMinWidth: =400
+                    ZIndex: =2
+
+                    OrderType As typedDataCard.blankCard:
+                        BorderColor: =RGBA(0, 89, 178, 1)
+                        BorderStyle: =BorderStyle.Solid
+                        DisplayMode: =DisplayMode.Edit
+                        Fill: =RGBA(0, 0, 0, 0)
+                        Height: =35
+                        Width: =Parent.Width
+                        WidthFit: =true
+                        X: =0
+                        Y: =0
+                        ZIndex: =1
+
+                        DropdownCanvas1 As Dropdown.pcfdataset:
+                            DisplayMode: =DisplayMode.Edit
+                            Height: =32
+                            Items: =["Fuel", "IT", "General"]
+                            Width: =Parent.Width *60%
+                            X: =Label9.Width
+                            Y: =0
+                            ZIndex: =1
+
+                        Label9 As label:
+                            BorderColor: =RGBA(0, 89, 178, 1)
+                            Color: =RGBA(0, 0, 0, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Height: =31
+                            Size: =13
+                            Text: |-
+                                ="Order Type:"
+                            Width: =Parent.Width *40%
+                            ZIndex: =2
+
+                    OrderSite As typedDataCard.blankCard:
+                        BorderColor: =RGBA(0, 89, 178, 1)
+                        BorderStyle: =BorderStyle.Solid
+                        DisplayMode: =DisplayMode.Edit
+                        Fill: =RGBA(0, 0, 0, 0)
+                        Height: =35
+                        Width: =Parent.Width
+                        WidthFit: =true
+                        X: =0
+                        Y: =1
+                        ZIndex: =1
+
+                        DropdownCanvas1_1 As Dropdown.pcfdataset:
+                            DisplayMode: =DisplayMode.Edit
+                            Height: =32
+                            Items: =SitesLocalVariable
+                            Width: =Parent.Width *60%
+                            X: =Label9_1.Width
+                            Y: =8
+                            ZIndex: =1
+
+                            Label10 As pcfDataField.textualColumn:
+                                FieldDisplayName: ="Label"
+                                FieldName: ="Label"
+                                FieldType: ="s"
+                                FieldVariantName: ="textualColumn"
+                                Order: =1
+                                ZIndex: =12
+
+                        Label9_1 As label:
+                            BorderColor: =RGBA(0, 89, 178, 1)
+                            Color: =RGBA(0, 0, 0, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Height: =31
+                            Size: =13
+                            Text: |-
+                                ="Order Site:"
+                            Width: =Parent.Width *40%
+                            Y: =9
+                            ZIndex: =2
+
+                    PartsItemNumber As typedDataCard.blankCard:
+                        BorderColor: =RGBA(0, 89, 178, 1)
+                        BorderStyle: =BorderStyle.Solid
+                        DisplayMode: =DisplayMode.Edit
+                        Fill: =RGBA(0, 0, 0, 0)
+                        Height: =43
+                        Width: =173
+                        WidthFit: =true
+                        X: =0
+                        Y: =2
+                        ZIndex: =1
+
+                        "TextInputCanvas2 As 'Text input'":
+                            DisplayMode: =DisplayMode.Edit
+                            Height: =32
+                            Width: =Parent.Width *60%
+                            X: =207
+                            Y: =11
+                            ZIndex: =2
+
+                        Label9_2 As label:
+                            BorderColor: =RGBA(0, 89, 178, 1)
+                            Color: =RGBA(0, 0, 0, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Height: =28
+                            Size: =13
+                            Text: |-
+                                ="Parts: "
+                            Width: =194
+                            Y: =11
+                            ZIndex: =4
 
             SidebarContainer3_3 As groupContainer.verticalAutoLayoutContainer:
                 DropShadow: =DropShadow.Light
