--- a/CCFS Tickets/Src/Dashboard.fx.yaml
+++ b/CCFS Tickets/Src/Dashboard.fx.yaml
@@ -896,7 +896,7 @@
                             Height: =28
                             Size: =13
                             Text: |-
-                                ="Parts: "
+                                ="Part #: "
                             Width: =194
                             Y: =11
                             ZIndex: =4
