--- a/CCFS Tickets/Src/Dashboard.fx.yaml
+++ b/CCFS Tickets/Src/Dashboard.fx.yaml
@@ -766,10 +766,10 @@
                                 QuickOrderCollectionSend,
                                 {
                                     OrderType: DropdownCanvas1.Selected.Value,
-                                    PartsItemNumber: TextInputCanvas2.Text,
-                                    PartsItemDesc: TextInputCanvas2_1.Text,
-                                    TextInputCanvas2_1: TextInputCanvas2_2.Text,
-                                    OrderSite: DropdownCanvas1_1.Selected.Value
+                                    PartsItemNumber: TextInputCanvas2.Value,
+                                    PartsItemDesc: TextInputCanvas2_1.Value,
+                                    TextInputCanvas2_1: TextInputCanvas2_2.Value,
+                                    OrderSite: DropdownCanvas1_1.Selected.
                                 }
                             );
                             
